--- a/futsal/app/src/main/AndroidManifest.xml
+++ b/futsal/app/src/main/AndroidManifest.xml
@@ -19,17 +19,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".HomeActivity" />
         <activity android:name=".LpPassword" />
         <activity android:name=".activity_lp_password1" />
         <activity android:name=".activity_lp_password2" />
         <activity android:name=".activity.AboutUS" />
         <activity
-            android:name=".navigasi"
-            android:label="@string/title_activity_navigasi"
-            android:theme="@style/AppTheme"></activity>
+            android:name=".Home"
+            android:label="@string/title_activity_home"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Login"></activity>
     </application>
 
 </manifest>
