login dan register done , list view tempat futsal masih proses

--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -2,9 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.futsal2.myapplication1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ftsal"
+        android:icon="@mipmap/f1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -28,6 +31,7 @@
         <activity android:name=".BuatPertandingan" />
         <activity android:name=".Sunting" />
         <activity android:name=".detail" />
+        <activity android:name=".DetailTempat" />
         <activity android:name=".TempatFutsal"></activity>
     </application>
 
