--- a/MyApplication1/app/src/main/AndroidManifest.xml
+++ b/MyApplication1/app/src/main/AndroidManifest.xml
@@ -13,27 +13,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        <activity android:name=".Login"></activity>
+        <activity
+            android:name=".Home"
+            android:label="@string/title_activity_home"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Register" />
+        <activity android:name=".Splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-        android:name=".Home"
-            android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Register" />
-        <activity android:name=".Splashscreen" />
         <activity android:name=".LpPassword" />
         <activity android:name=".LpPassword1" />
         <activity android:name=".LpPassword2" />
-        <activity android:name=".BuatPertandingan" />
         <activity android:name=".Sunting" />
         <activity android:name=".detail" />
         <activity android:name=".DetailTempat" />
-        <activity android:name=".TempatFutsal"></activity>
+        <activity android:name=".TempatFutsal" />
+        <activity android:name=".BuatPertan"></activity>
     </application>
 
 </manifest>
